moved the for statement used to get the position of each vowel in the text box into the speakText function so that each vowel will be displayed in the console regardless of whether or not the text inside the text box is changed

--- a/index.html
+++ b/index.html
@@ -155,13 +155,19 @@
                 document.getElementById('result').innerHTML = "Speech ready to play.";
             }
           });
+          // Gets the position of each vowel in the text box.
+          var str = document.getElementById("textEntry").value;     
+          for(var i = 0; i < str.length; i++)
+          {
+              console.log(str.match(/[aeiou]/gi));
+          }
         }
         // Gets the position of each vowel in the text box.
-        var str = document.getElementById("textEntry").value;     
+        /*var str = document.getElementById("textEntry").value;     
         for(var i = 0; i < str.length; i++)
         {
             console.log(str.match(/[aeiou]/gi));
-        }
+        }*/
     </script>
     <!--<div id="textToSpeech">
         <button class="tab current" onclick="toggleHost(event)">Casi</button>
