added a toLowerCase() statement to the speechParams.Text = document.getElementById(textEntry).value thus making it speechParams.Text = document.getElementById(textEntry).value.toLowerCase() to make it so that the text entered in the text box will be converted to lower case letters.

--- a/index.html
+++ b/index.html
@@ -130,15 +130,18 @@
         function speakText() {
             // Create the JSON parameters for getSynthesizeSpeechUrl
             var speechParams = {
-                //OutputFormat: "json",
-                OutputFormat: "mp3",
+                OutputFormat: "json",
+                //OutputFormat: "mp3",
                 SampleRate: "16000",
                 Text: "",
                 TextType: "text",
-                VoiceId: "Joanna"
-                //SpeechMarkTypes: ["viseme", "word"]
+                VoiceId: "Joanna",
+                SpeechMarkTypes: ["viseme", "word"]
             };
-            speechParams.Text = document.getElementById("textEntry").value; 
+            speechParams.Text = document.getElementById("textEntry").value.toLowerCase(); 
+            var lowerSpeechParams = document.getElementById("textEntry").value.toLowerCase();
+            //document.getElementById("textEntry").innerHTML = lowerSpeechParams.toLowerCase();
+            console.log(speechParams.Text);
             
             // Create the Polly service object and presigner object
             var polly = new AWS.Polly({apiVersion: '2016-06-10'});
