--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
                         console.log(startTime);
                         console.log(endTime);
                         //return viseme, time, startTime, endTime;
+                        //put the values of variables viseme, time, startTime, endTime into the function
+                        //var lipSync = scene.onBeforeRenderObservable.add(function in babylonScene.js
                     }
                     /*for(var i in Array(12).keys()){
                         if(out.hasOwnProperty(i)){
