--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
                         console.log(time);
                         console.log(startTime);
                         console.log(endTime);
-                        //return viseme, time, startTime, endTime;
+                        console.log(lipSync);
+                        return viseme, time, startTime, endTime;
                         //put the values of variables viseme, time, startTime, endTime into the function
                         //var lipSync = scene.onBeforeRenderObservable.add(function in babylonScene.js
                     }
