--- a/index.html
+++ b/index.html
@@ -423,11 +423,11 @@ function loop(timestamp, passJson, newViseme, newTime, newStartTime, newEndTime)
     console.log(newEndTime);
     
 };
-   engine.runRenderLoop(function () {
+  /* engine.runRenderLoop(function () {
 	
 	scene.render();
 	
-});
+});*/
     </script>
 </body>
 </html>
