--- a/sample(8)/index.html
+++ b/sample(8)/index.html
@@ -54,7 +54,42 @@
         var scene = null;
         var sceneToRender = null;
         var createDefaultEngine = function() { return new BABYLON.Engine(canvas, true, { preserveDrawingBuffer: true, stencil: true,  disableWebGL2Support: false}); };
-        var createScene = function () {
+        var jsonParsed = //'[{"time":6,"type":"word","start":0,"end":4,"value":"it\'s"},'+
+                '[{"time":6,"type":"viseme","value":"i"},' +
+                '{"time":64,"type":"viseme","value":"t"},' +
+                '{"time":122,"type":"viseme","value":"s"},' +
+                //'{"time":190,"type":"word","start":5,"end":9,"value":"very"},' +
+                '{"time":190,"type":"viseme","value":"f"},' +
+                '{"time":241,"type":"viseme","value":"E"},' +
+                '{"time":282,"type":"viseme","value":"r"},' +
+                '{"time":376,"type":"viseme","value":"i"},' +
+                //'{"time":416,"type":"word","start":10,"end":14,"value":"good"},' +
+                '{"time":416,"type":"viseme","value":"k"},' +
+                '{"time":481,"type":"viseme","value":"u"},' +
+                '{"time":576,"type":"viseme","value":"t"},' +
+                //'{"time":627,"type":"word","start":15,"end":17,"value":"to"},' +
+                '{"time":627,"type":"viseme","value":"t"},' +
+                '{"time":674,"type":"viseme","value":"u"},' +
+                //'{"time":716,"type":"word","start":18,"end":22,"value":"meet"},' +
+                '{"time":716,"type":"viseme","value":"p"},' +
+                '{"time":801,"type":"viseme","value":"i"},' +
+                '{"time":923,"type":"viseme","value":"t"},' +
+                //'{"time":999,"type":"word","start":23,"end":26,"value":"you"},' +
+                '{"time":999,"type":"viseme","value":"i"},' +
+                '{"time":1135,"type":"viseme","value":"u"},' +
+                '{"time":1357,"type":"viseme","value":"sil"}]';
+const obj = JSON.parse(jsonParsed);                
+let t = 0;
+console.log(obj);
+var lipChange = function(data){
+    for(var index = 0; index < obj.length; i++){
+        data[index] = obj[index]["value"];
+        console.log(data);
+    }
+}
+
+
+var createScene = function () {
     // This creates a basic Babylon Scene object (non-mesh)
     var scene = new BABYLON.Scene(engine);
 
@@ -89,13 +124,13 @@
                 var casiVisor = scene.getMeshByName("Casi's Visor");
                 casiVisor.setEnabled(true);
                 casiVisor.visibility = 0.7;
-                var keyAction3 = new BABYLON.AnimationGroup("Key.003Action");
 
                 var casiBody = scene.getMeshByName("Casi's Body.001_primitive0");
                 var casiInnerMouth = scene.getMeshByName("Casi's Body.001_primitive2");
                 var casiTeeth = scene.getMeshByName("Casi's Teeth");
                 var primitive = scene.getMeshByName("Primitives.001");
-                var jsonParsed = //'[{"time":6,"type":"word","start":0,"end":4,"value":"it\'s"},'+
+                //casiBody.updateMeshPositions(lipChange);
+                /*var jsonParsed = //'[{"time":6,"type":"word","start":0,"end":4,"value":"it\'s"},'+
                 '[{"time":6,"type":"viseme","value":"i"},' +
                 '{"time":64,"type":"viseme","value":"t"},' +
                 '{"time":122,"type":"viseme","value":"s"},' +
@@ -120,25 +155,35 @@
                 '{"time":1135,"type":"viseme","value":"u"},' +
                 '{"time":1357,"type":"viseme","value":"sil"}]';
                 
-                const obj = JSON.parse(jsonParsed);
-                let t = 0;
+                //const obj = JSON.parse(jsonParsed);
+                //var t = 0;
                 //const lipSync = 'a';
-                const lipSync = obj[t]['value'];
-                const vowelInput = {
-                    value: lipSync,
+                //const lipSync = obj[t]['value'];*/
+                var frameRate = 30;
+                var morph = new BABYLON.Animation('morph', 'influence', frameRate, BABYLON.Animation.ANIMATIONTYPE_FLOAT, BABYLON.Animation.ANIMATIONLOOPMODE_CYCLE);
+                const keyFrames = [];
+                for(var t = 0; t < obj.length; t++){
+                    var currentFrame = obj[t]['time'];
+                    keyFrames.push({
+                        frame: currentFrame,
+                        value: 1,
+                    });
+                    console.log(keyFrames.frame);
                 }
+                morph.setKeys(keyFrames);
+                casiBody.animations.push(morph);
+                console.log(casiBody.animations);
+                console.log(morph);
+                /*const vowelInput = {
+                    value: lipSync,
+                }*/
 
                 // Create custom observable for the 'vowelInput' 
                 vowelInput.onValueChange = new BABYLON.Observable();
 
                 // Create function to set current vowel
                 const setCurrentVowel = (value) => {
-                    /*if(intr === 0){//the lip position doesn't change the first time setCurrentVowel is ran so I added if(intr === 0) to make it so the lip position does change the first time setCurrentVowel is used
-                        vowelInput.value = value;
-                        vowelInput.onValueChange.notifyObservers(vowelInput.value);
-                    }*/
                     if (value === vowelInput.value) {
-                        console.log(value);
                         return value
                     } else {
                         vowelInput.value = value
@@ -149,7 +194,6 @@
 
                 // Add callback function to the custom observable 
                 vowelInput.onValueChange.add((value) => {
-					console.log(value);
                     switch (value) {
                         case 'a': {
                             // Instead of changing position, you can all lip animations according to the vowel.
@@ -305,8 +349,7 @@
                 })
 
                 let idx = 0
-                //const vowels = ['a', 'e', 'o', 'u', 'i', 'f']
-				const vowels = ['i', 'f', 'e', 'r', 'i', 'u', 'u', 'i', 'i', 'u']//I tested this out and it works
+                const vowels = ['a', 'e', 'o', 'u', 'i', 'f']
                 var soundURL = "speech.mp3";
                 //alpha is the timer I use
                 let alpha = 0;
@@ -314,26 +357,26 @@
                 var speech = new BABYLON.Sound("speech", url + soundURL, scene, function(){
                     setTimeout(speech.play(), 9000);
                 });
+
                 //const inter = setInterval(() => {
-                var intervalID = scene.onBeforeRenderObservable.add(function(){
-                    alpha += engine.getDeltaTime();//continuously add 1 to the timer
-                    if(alpha === obj[t]['time'] || alpha > obj[t]['time']){//if we've reached a time shown in jsonParsed array
-                        console.log(alpha, t, obj[t]['time']);
+                /*var intervalID = scene.onBeforeRenderObservable.add(function(){
+                    alpha += 1;//continuously add 1 to the timer
+                    if(alpha === obj[t]['time']){//if we've reached a time shown in jsonParsed array
                         setCurrentVowel(obj[t]['value']);
                         t = (t + 1) % obj.length;
 
                         console.log(alpha, t, obj[t]['time']);
                     }
 
-                    /*setTimeout(() => {
+                    setTimeout(() => {
                         setInterval(inter, obj[t]['time']);
                         
 
-                    });*/
+                    });
                     //setCurrentVowel(obj[t]['value']);
                     //t = (t + 1) % obj.length;
                     //idx = (idx + 1) % 6
-                });
+                });*/
                 //}, 1000)
                 /*function inter(){
                     setCurrentVowel(obj[t]['value']);
