--- a/sample(8)/index.html
+++ b/sample(8)/index.html
@@ -82,7 +82,7 @@ const obj = JSON.parse(jsonParsed);
 let t = 0;
 console.log(obj);
 var lipChange = function(data){
-    for(var index = 0; index < obj.length; i++){
+    for(var index = 0; index < obj.length; index++){
         data[index] = obj[index]["value"];
         console.log(data);
     }
@@ -129,6 +129,7 @@ var createScene = function () {
                 var casiInnerMouth = scene.getMeshByName("Casi's Body.001_primitive2");
                 var casiTeeth = scene.getMeshByName("Casi's Teeth");
                 var primitive = scene.getMeshByName("Primitives.001");
+				var casiEyelashes = scene.getMeshByName("Casi's Other Eyebrows");
                 //casiBody.updateMeshPositions(lipChange);
                 /*var jsonParsed = //'[{"time":6,"type":"word","start":0,"end":4,"value":"it\'s"},'+
                 '[{"time":6,"type":"viseme","value":"i"},' +
@@ -172,7 +173,7 @@ var createScene = function () {
                     });
 					//2 seconds later the lip position will be reset back to 0
 					keyFrames.push({
-						frameL currentFrame + 2,
+						frame: currentFrame + 2,
 						value: 0,
 					})
                     console.log(keyFrames.frame);
@@ -360,10 +361,19 @@ var createScene = function () {
                 var soundURL = "speech.mp3";
                 //alpha is the timer I use
                 let alpha = 0;
+				let t = 0;
                 // Change current vowel repeatedly
                 var speech = new BABYLON.Sound("speech", url + soundURL, scene, function(){
                     setTimeout(speech.play(), 9000);
                 });
+				
+				//causes Casi's Eyes to blink rapidly but I need something to delay the blinking
+				scene.onBeforeRenderObservable.add(function(){
+					casiBody.morphTargetManager.getTarget(2).influence = Math.abs(Math.cos(t));
+					casiEyelashes.morphTargetManager.getTarget(2).influence = Math.abs(Math.cos(t));
+					t += 0.05;
+					
+				});
 
                 //const inter = setInterval(() => {
                 /*var intervalID = scene.onBeforeRenderObservable.add(function(){
